// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toast has variants and inlines 1`] = `
<div
  className="sc-bczRLJ jAZNhq"
>
  <div
    className="success"
  >
    <div
      className="title"
    >
      Success title
    </div>
    <div
      className="body"
    >
      Toast body
    </div>
  </div>
</div>
`;

exports[`Toast has variants and inlines 2`] = `
<div
  className="sc-bczRLJ jAZNhq"
>
  <div
    className="failure"
  >
    <div
      className="title"
    >
      Failure title
    </div>
    <div
      className="body"
    >
      Toast body
    </div>
  </div>
</div>
`;

exports[`Toast has variants and inlines 3`] = `
<div
  className="sc-bczRLJ jSNerL"
>
  <div
    className="neutral"
  >
    <div
      className="title"
    >
      Inline
    </div>
    <div
      className="body"
    >
      Toast body
    </div>
  </div>
</div>
`;

exports[`Toast matches snapshot 1`] = `
<div
  className="sc-bczRLJ jAZNhq"
>
  <div
    className="neutral"
  >
    <div
      className="title"
    >
      Toast title
    </div>
    <div
      className="body"
    >
      Toast body
    </div>
  </div>
</div>
`;
